# OOOOOH

./: .gitignore  MANIFEST.in  Makefile  README.md  exemple.py  pyproject.toml  setup.py
OOOOOH/: default.py  ecriture_inclusive.py  normalizer.py
presque/: __init__.py  default.py  ecriture_inclusive.py  normalizer.py
presque/data/: abbreviations.csv
spacy_presque/: chars.py  normalizer.py
